# OpenGLExample

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: Camera.h  Config.h  Image.h  Light.h  Math3d.h  Pipeline.h  Statistics.h  Technique.h  Texture.h  Vertex.h
common/src/: Camera.cpp  Image.cpp  Math3d.cpp  Pipeline.cpp  Statistics.cpp  Technique.cpp  Texture.cpp
gl3w/: CMakeLists.txt
glfwsupport/: CMakeLists.txt
glfwsupport/include/: GlfwSupport.h  ICallbacks.h
glfwsupport/src/: GlfwSupport.cpp  ICallbacks.cpp
ogldev/t01/: CMakeLists.txt
ogldev/t01/src/: main.cpp
ogldev/t02/: CMakeLists.txt
ogldev/t02/src/: main.cpp
ogldev/t03/src/: main.cpp
ogldev/t04/: CMakeLists.txt
ogldev/t04/shaders/: triangles.vert
ogldev/t04/src/: main.cpp
ogldev/t05/shaders/: triangles.vert
ogldev/t05/src/: main.cpp
ogldev/t06/shaders/: triangles.vert
ogldev/t06/src/: main.cpp
ogldev/t07/src/: main.cpp
ogldev/t08/shaders/: triangles.frag
ogldev/t09/: CMakeLists.txt
ogldev/t09/src/: main.cpp
ogldev/t10/src/: main.cpp
ogldev/t11/src/: main.cpp
ogldev/t12/shaders/: triangles.frag
ogldev/t12/src/: main.cpp
ogldev/t13/: CMakeLists.txt
ogldev/t13/shaders/: triangles.vert
ogldev/t13/src/: main.cpp
ogldev/t14/src/: main.cpp
ogldev/t15/src/: main.cpp
ogldev/t16/: CMakeLists.txt
ogldev/t16/shaders/: triangles.frag  triangles.vert
ogldev/t16/src/: main.cpp
ogldev/t17/: CMakeLists.txt
ogldev/t17/include/: AmbientLight.h  TechLight.h
ogldev/t17/shaders/: lighting.fs  lighting.vs
ogldev/t17/src/: AmbientLight.cpp  TechLight.cpp  main.cpp
util/: CMakeLists.txt
util/include/: Keys.h  Types.h  Util.h
util/src/: Util.cpp
